--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
@@ -15,6 +15,11 @@
   &-content{
     width: 100%;
   }
+  &-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .h1-title {
     width: 100%;
