--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -3,7 +3,7 @@
     <div class="section">
         <div class="section-content">
             <h1 class="h1-title" i18n>Vogel et al (1990) <small>[População feminina]</small></h1>
-            <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+            <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
                 <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
                 <input type="hidden" name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
