--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -3,7 +3,7 @@
     <div class="section">
         <div class="section-content">
             <h1 class="h1-title" i18n>IC - Índice de Conicidade</h1>
-            <form class="section-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+            <form class="section-form" #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <table class="section-table">
                     <thead>
                         <tr>
@@ -115,17 +115,17 @@
                     </button>
                     <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                         (click)="addEvaluation()">
-                        <mat-icon class="mat-18">add</mat-icon>
+                        <mat-icon class="mat-18" color="accent">add</mat-icon>
                     </button>
                     <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || editAv" mat-mini-fab
                         color="default" (click)="pointer=pointer+1">
                         <mat-icon class="mat-14">chevron_right</mat-icon>
                     </button>
                     <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
-                        <mat-icon class="mat-18">close</mat-icon>
+                        <mat-icon class="mat-18" color="warn">close</mat-icon>
                     </button>
                     <button *ngIf="addEval" mat-stroked-button>
-                        <mat-icon class="mat-18">check</mat-icon>
+                        <mat-icon class="mat-18" color="accent">check</mat-icon>
                     </button>
                 </div>
             </form>
