--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <h1 class="h1-title">Dados Complementares</h1>
-        <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+        <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -37,7 +37,7 @@
                                 type="text" class="data-input" (focus)="$event.target.select()">
                         </td>
                         <td *ngIf="addEval">
-                            <input name="avaliador" #avaliador="ngModel" [(ngModel)]="newEvaluation.avaliador"
+                            <input name="avaliador" #avaliador="ngModel" [(ngModel)]="newEvaluation.avaliador" style="width: 120px;"
                                 type="text" class="data-input" (focus)="$event.target.select()">
                         </td>
                     </tr>
@@ -169,7 +169,7 @@
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="editAv" mat-stroked-button (click)="addEvaluation()">
-                    <mat-icon class="mat-18">add</mat-icon>
+                    <mat-icon class="mat-18" color="accent">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
@@ -177,10 +177,10 @@
                 </button>
                 <button type="button" *ngIf="addEval" [disabled]="editAv" mat-stroked-button color="default"
                     (click)="closeInput()">
-                    <mat-icon class="mat-18">close</mat-icon>
+                    <mat-icon class="mat-18" color="warn">close</mat-icon>
                 </button>
                 <button *ngIf="addEval" [disabled]="editAv" mat-stroked-button>
-                    <mat-icon class="mat-18">check</mat-icon>
+                    <mat-icon class="mat-18" color="accent">check</mat-icon>
                 </button>
             </div>
         </form>
