--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -3,7 +3,7 @@
 
     <div class="section">
         <div class="section-content">
-            <form #f="ngForm" (submit)="save(f.value)">
+            <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)">
                 <h1 class="h1-title" i18n="Title">Flexiteste</h1>
                 <mat-tab-group [disableRipple]="false" [(selectedIndex)]="selectedTab">
 
@@ -252,7 +252,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -261,10 +261,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <div class="images" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
@@ -522,7 +522,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -531,10 +531,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <div class="images" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
@@ -733,7 +733,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -742,10 +742,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <div class="images" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
@@ -983,7 +983,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -992,10 +992,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <!--       </form> -->
@@ -1442,7 +1442,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -1451,10 +1451,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <!--         </form> -->
@@ -1708,7 +1708,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -1717,10 +1717,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <!--     </form> -->
@@ -1970,7 +1970,7 @@
                             </button>
                             <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                                 (click)="addEvaluation()">
-                                <mat-icon class="mat-18">add</mat-icon>
+                                <mat-icon class="mat-18" color="accent">add</mat-icon>
                             </button>
                             <button type="button" *ngIf="!addEval"
                                 [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab
@@ -1979,10 +1979,10 @@
                             </button>
                             <button type="button" *ngIf="addEval" mat-stroked-button color="default"
                                 (click)="closeInput()">
-                                <mat-icon class="mat-18">close</mat-icon>
+                                <mat-icon class="mat-18" color="warn">close</mat-icon>
                             </button>
                             <button *ngIf="addEval" mat-stroked-button>
-                                <mat-icon class="mat-18">check</mat-icon>
+                                <mat-icon class="mat-18" color="accent">check</mat-icon>
                             </button>
                         </div>
                         <!--   </form> -->
